--- a/css/style.css
+++ b/css/style.css
@@ -839,6 +839,10 @@ main {
   border-radius: 5px;
 }
 
+.text__hashtags--error {
+  border-color: red;
+}
+
 .text__description {
   width: 450px;
   height: 100px;
